--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="../UASSSFE/asset/logoUASFE.png">
-        <title>ng e-Asdos Bookstore</title>
+        <title>PagePetal Store</title>
         <link rel="stylesheet" type="text/css" href="home.css">
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
         <script src="https://kit.fontawesome.com/8f441d49ca.js" crossorigin="anonymous"></script>
