--- a/search.html
+++ b/search.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../UASSSFE/asset/logoUASFE.png">
-    <title>ng e-Asdos Bookstore</title>
+    <title>PagePetal Sroe</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://kit.fontawesome.com/8f441d49ca.js" crossorigin="anonymous"></script>
 </head>
