--- a/landing.html
+++ b/landing.html
@@ -28,8 +28,8 @@
     </section>
 
     <footer>
-        <center><b><span>© Created by : ng e-Asdos</span></b> </center>
-        <center><b><span>© Designed by : ng e-Asdos</span></b></center>
+        <center><b><span>© Created by : PagePetal</span></b> </center>
+        <center><b><span>© Designed by : PagePetal</span></b></center>
     </footer>
 
 </div>
