--- a/home.html
+++ b/home.html
@@ -76,9 +76,9 @@
         <div class="row">
             
             <div class="content"></div>
-            <h3><i>"What is <span2>Ng e-Asdos Bookstore?"</span2></i></h3>
+            <h3><i>"What is <span2>PagePetal Store?"</span2></i></h3>
             <p>
-                <b><span2>ng e-Asdos Bookstore</span2></b> adalah salah satu online Bookstore
+                <b><span2>PagePetal Store</span2></b> adalah salah satu online Bookstore
                     yang menjual berbagai macam novel dengan genre yang berbeda-beda
                     seperti romance, fiksi, fantasy, fan fiction, mystery, comedy, dll.
 
@@ -122,8 +122,8 @@
     </div>  
 </div>
         <div class="info-container">
-            <center>© Created by :<span> ng e-Asdos</span> </center>
-            <center>© Designed by :<span> ng e-Asdos</span> </center>
+            <center>© Created by :<span> PagePetal</span> </center>
+            <center>© Designed by :<span> PagePetal</span> </center>
         </div>
         </div>
     </section>
