--- a/landing.html
+++ b/landing.html
@@ -32,7 +32,53 @@
         <center><b><span>© Designed by : ng e-Asdos</span></b></center>
     </footer>
 
-</div>
+    </div>
+
+
+
+
+
+    <!-- Ini login page dan sign in page-->
+   <button class="open-button" onclick="openForm()">Open Form</button>
+   <div class="form-popup" id="myForm">
+   <form action=" ... " class="form-container">
+    <h1>Login</h1>
+
+    <label for="email"><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" name="email" required>
+
+    <label for="psw"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="psw" required>
+
+    <button type="submit" class="btn">Login</button>
+    <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+
+    <!--Coba Pakai Angular-->
+    <script src="./angular.js"></script>
+    <div ng-app="myApp" ng-controller="myCtrl">
+        <p> Email : <input type="text" ng-model="name + lastname" ></p>
+        <p> {{name + ' ' + lastname}} </p>
+    </div>
+    <script>
+        var app = angular.module('myApp', []);
+        app.controller('myCtrl', function($scope) {
+            $scope.name = "Widya";
+            $scope.lastname = " Khaerunnisyah";
+        });
+    </script>
+    </form>
+
+    </div>
+
+    <script>
+    function openForm() {
+    document.getElementById("myForm").style.display = "block";
+    }
+
+    function closeForm() {
+    document.getElementById("myForm").style.display = "none";
+    }
+    </script>
 
 </body>
 </html>
