--- a/ourBooks.html
+++ b/ourBooks.html
@@ -14,7 +14,7 @@
 <header class="sticky">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand " href="#">PagePetal Store</a>
+            <a class="navbar-brand " href="home.html">PagePetal Store</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
