--- a/trolley.html
+++ b/trolley.html
@@ -25,6 +25,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="navbar-nav ms-auto">
+                        <div class="hamburger">
+                            <i class="fa-solid fa-bars"></i>
+                        </div>
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="landing.html">Home</a>
@@ -42,6 +45,7 @@
                                 <a class="nav-link active" aria-current="page" href="trolley.html">Trolley</a>
                             </li>
                         </ul>
+                        
                     </div>
                 </div>
             </div>
