--- a/trolley.html
+++ b/trolley.html
@@ -13,7 +13,8 @@
 </head>
 
 <body ng-controller="TrolleyController">
-
+    
+    <div class="hamburger" ng-click="toggleMenu()">☰</div>
 
     <header class="sticky">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -25,9 +26,6 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="navbar-nav ms-auto">
-                        <div class="hamburger">
-                            <i class="fa-solid fa-bars"></i>
-                        </div>
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="landing.html">Home</a>
