--- a/landing.html
+++ b/landing.html
@@ -17,11 +17,11 @@
     <section class="landing" id="landing">
 
         <div class="landing-img">
-            <img src="asset/Untitled design.png" alt="logo">
+            <img src="asset/PagePetal.png" alt="logo">
         </div>
-
+<!-- 
         <div class="button">
-            <a href="home.html" class="btn"><img src="asset/Picture1.png" alt="logo"></a>
+            <a href="home.html" class="btn"><img src="asset/PagePetal.png" alt="logo"></a> -->
             
         </div>
     
