--- a/landing.html
+++ b/landing.html
@@ -28,8 +28,12 @@
     </section>
 
     <footer>
-        <center><b><span>© Created by : PagePetal</span></b> </center>
-        <center><b><span>© Designed by : PagePetal</span></b></center>
+        <div class="info-column">
+            <div class="info-container">
+                <center><b>© Created by : PagePetal </center>
+                <center>© Designed by : PagePetal </b></center>
+            </div>
+            </div>
     </footer>
 
     </div>
@@ -53,7 +57,7 @@
     <button type="submit" class="btn">Login</button>
     <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
 
-    <!--Coba Pakai Angular-->
+    <!--Coba Pakai Angular
     <script src="./angular.js"></script>
     <div ng-app="myApp" ng-controller="myCtrl">
         <p> Email : <input type="text" ng-model="name + lastname" ></p>
@@ -66,7 +70,7 @@
             $scope.lastname = " Khaerunnisyah";
         });
     </script>
-    </form>
+    </form> -->
 
     </div>
 
