--- a/landing.html
+++ b/landing.html
@@ -19,9 +19,9 @@
         <div class="landing-img">
             <img src="asset/PagePetal.png" alt="logo">
         </div>
-
+<!-- 
         <div class="button">
-            <a href="home.html" class="btn"><img src="asset/PagePetal.png" alt="logo"></a> 
+            <a href="home.html" class="btn"><img src="asset/PagePetal.png" alt="logo"></a> -->
             
         </div>
     
