--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../UASSSFE/asset/logoUASFE.png">
     <title>PagePetal Store</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="search.css">
     <script src="https://kit.fontawesome.com/8f441d49ca.js" crossorigin="anonymous"></script>
 </head>
 
