--- a/trolley.html
+++ b/trolley.html
@@ -13,8 +13,6 @@
 </head>
 
 <body ng-controller="TrolleyController">
-    
-    <div class="hamburger" ng-click="toggleMenu()">☰</div>
 
     <header class="sticky">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -64,7 +62,7 @@
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-    <script src="script.js"></script>
+    <script src="trolley.js"></script>
 
 </body>
 
