--- a/landing.html
+++ b/landing.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PagePetal Store</title>
-    <link rel="icon" href="asset/Untitled design.png">
+    <link rel="icon" href="asset/PagePetal.png">
 
     <link rel="stylesheet" type="text/css" href="landing.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
