--- a/search.html
+++ b/search.html
@@ -36,8 +36,8 @@
                             <li class="nav-item ">
                                 <a class="nav-link active" aria-current="page" href="search.html">Search</a>
                             </li>
-                            <li class="nav-item ">
-                                <a class="nav-link active" aria-current="page" href="trolley.html">Trolley</a>
+                            <li class="button ">
+                                <a href="trolley.html" class="btn"><img src="asset/shopp.png" alt="logo"></a>
                             </li>
                     </div>
                 </div>
