--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="../UASSSFE/asset/logoUASFE.png">
+        <link rel="icon" href="asset/PagePetal.png">
         <title>PagePetal Store</title>
         <link rel="stylesheet" type="text/css" href="home.css">
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
