--- a/search.html
+++ b/search.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/8f441d49ca.js" crossorigin="anonymous"></script>
 </head>
 
-<body ng-controller="BookController">
+<body ng-controller="BookController" ng-style="{'height': bodyHeight}">
     <header class="sticky">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
