--- a/ourBooks.html
+++ b/ourBooks.html
@@ -23,7 +23,7 @@
                 <div class="navbar-nav ms-auto">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="landing.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="home.html">About</a>
